objects/lnt__Gift__c.object
<CustomObject>
    <fields>
        <fullName>lnt__Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Budgeted_from_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budgeted from User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gifts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Campaign_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Collection__c</fullName>
        <label>Collection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Custom_Expiration_Date_Method__c</fullName>
        <label>Custom Expiration Date Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Custom – relative date</fullName>
                </value>
                <value>
                    <fullName>Custom – specific date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Custom_Object_Id__c</fullName>
        <label>Custom Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Custom_Object_Name__c</fullName>
        <label>Custom Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Default_Expire_Date__c</fullName>
        <formula>ADDMONTHS(lnt__Scheduled_At__c ,12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Expire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lnt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>lnt__Expire_date__c</fullName>
        <label>Expire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Id__c</fullName>
        <externalId>true</externalId>
        <label>Gift Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Initiation_Method__c</fullName>
        <label>Initiation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Button in List View</fullName>
                </value>
                <value>
                    <fullName>Button in Record Detail</fullName>
                </value>
                <value>
                    <fullName>Widget in Record Detail</fullName>
                </value>
                <value>
                    <fullName>Automated via Campaign Gift Rules</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Loop_Tie_Environment__c</fullName>
        <label>Loop &amp; Tie Environment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Loop_Tie_Organization__c</fullName>
        <label>Loop &amp; Tie Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lnt__Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Org_ID__c</fullName>
        <label>Org ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Org_Name__c</fullName>
        <label>Org Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Preview_Url__c</fullName>
        <label>Preview Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lnt__Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Recipient__c</fullName>
        <formula>IF( NOT( ISBLANK( lnt__Contact_Id__c ) ) ,  lnt__Contact_Id__r.FirstName + &apos; &apos; +  lnt__Contact_Id__r.LastName ,  lnt__Lead_Id__r.FirstName + &apos; &apos; +  lnt__Lead_Id__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Scheduled_At__c</fullName>
        <label>Scheduled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lnt__Selected_Product__c</fullName>
        <label>Selected Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Send_Date_Method__c</fullName>
        <label>Send Date Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Send_Gift_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Gift Template</label>
        <referenceTo>lnt__Send_Gift_Template__c</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Send_from_Method__c</fullName>
        <label>Send from Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Sender</fullName>
                </value>
                <value>
                    <fullName>Dynamic Sender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Sender_Name__c</fullName>
        <formula>lnt__Sender__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Sender__c</fullName>
        <description>Show selected  sender name</description>
        <label>Sender</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Sent_from_Object__c</fullName>
        <label>Sent from Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>scheduled</fullName>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>sent</fullName>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>opened</fullName>
                    <label>Opened</label>
                </value>
                <value>
                    <fullName>declined</fullName>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>redeemed</fullName>
                    <label>Redeemed</label>
                </value>
                <value>
                    <fullName>shipped</fullName>
                    <label>Shipped</label>
                </value>
                <value>
                    <fullName>delivered</fullName>
                    <label>Delivered</label>
                </value>
                <value>
                    <fullName>canceled</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>bounced</fullName>
                    <label>Bounced</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lnt__Team__c</fullName>
        <label>Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Thank_You_Note__c</fullName>
        <label>Thank You Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lnt__Untie_Url__c</fullName>
        <label>Untie Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lnt__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Variant__c</fullName>
        <label>Variant</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Gift</label>
    <listViews>
        <fullName>lnt__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>lnt__Scheduled_At__c</columns>
        <columns>lnt__Stage__c</columns>
        <columns>lnt__Sender_Name__c</columns>
        <columns>lnt__Recipient__c</columns>
        <columns>lnt__Team__c</columns>
        <columns>lnt__Collection__c</columns>
        <columns>lnt__Gift_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LT-{0000}</displayFormat>
        <label>Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <recordTypes>
        <fullName>lnt__Canceled_Gifts</fullName>
        <active>true</active>
        <label>Canceled Gifts</label>
    </recordTypes>
    <recordTypes>
        <fullName>lnt__Gift_Layout</fullName>
        <active>true</active>
        <label>Gift Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>